2007-12-11  David Schleef  <ds@schleef.org>

	* sys/glsink/Makefile.am:
	* sys/glsink/glimagesink.c:
	* sys/glsink/glvideo.c:
	* sys/glsink/glvideo.h:
	  Split out gl-related code into a separate file with a
	  sensible API.  Major cleanup.  Still crashes occasionally
	  due to different threads touching bits at the same time.

2007-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Wouter Cloetens <wouter at mind dot be>

	* ext/soup/gstsouphttpsrc.c: (_do_init),
	(gst_souphttp_src_class_init), (gst_souphttp_src_init),
	(gst_souphttp_src_dispose), (gst_souphttp_src_set_property),
	(gst_souphttp_src_get_property), (unicodify),
	(gst_souphttp_src_unicodify), (gst_souphttp_src_create),
	(gst_souphttp_src_start), (gst_souphttp_src_stop),
	(gst_souphttp_src_unlock), (gst_souphttp_src_unlock_stop),
	(gst_souphttp_src_get_size), (gst_souphttp_src_is_seekable),
	(soup_got_headers), (soup_got_body), (soup_finished),
	(soup_got_chunk), (soup_response), (soup_parse_status),
	(gst_souphttp_src_uri_get_type),
	(gst_souphttp_src_uri_get_protocols),
	(gst_souphttp_src_uri_get_uri), (gst_souphttp_src_uri_set_uri),
	(gst_souphttp_src_uri_handler_init):
	* ext/soup/gstsouphttpsrc.h:
	Do not try to unpause I/O in the "queued" state.
	Reorganise a bunch of things and cleanups.
	Uses G_GUINT64_FORMAT instead of hard-coding %llu.
	See #502335.

2007-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/x264/gstx264enc.c: (gst_x264_enc_set_src_caps):
	Fix caps memleak.

2007-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	  (gst_flv_parse_tag_video):
	  Don't strdup (and thus leak) codec name strings when passing
	  them to gst_tag_list_add().

2007-12-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_class_init),
	(gst_rtp_bin_handle_message):
	* gst/rtpmanager/gstrtpsession.c: (source_get_sdes_structure),
	(on_ssrc_sdes):