@@ -1,3 +1,12 @@
+2007-12-12  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/dts/gstdtsdec.c: (gst_dtsdec_init),
+	  (gst_dtsdec_sink_setcaps), (gst_dtsdec_chain_raw),
+	  (gst_dtsdec_chain):
+	* ext/dts/gstdtsdec.h:
+	  Add support for "audio/x-private1-dts" as used by flupsparse. Most
+	  changes adapted from a52dec.
+
 2007-12-11  David Schleef  <ds@schleef.org>
 
 	* sys/glsink/Makefile.am:
